<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">129199171153011</string>
    <string name="fb_login_protocol_scheme">fb129199171153011</string>

    <string name="app_name">Bancuri bune</string>
    <string name="add_joke">Adauga banc</string>
    <string name="added_by_label">"Adaugat de: "</string>
    <string name="add_limit_reached">Ai ajuns la limita de %s adaugari pe zi. Revino maine pentru a adauga un banc nou.</string>
    <string name="add_success">Am adaugat bancul cu success! El va fi vizibil in scurt timp in aplicatie.</string>
    <string name="add_failed">Nu am putut adauga bancul. Te rog sa incerci mai tarziu.</string>
    <string name="share_text">Hei! Am gasit aceasta super aplicatie de bancuri numita %s. Bancul zilei este:</string>
    <string name="my_jokes_title">Bancurile mele</string>
    <string name="approved">aprobat</string>
    <string name="not_approved">asteapta aprobare</string>
    <string name="add_joke_hint">Adauga bancul tau aici…</string>
    <string name="search_hint">Cauta banc…</string>
    <string name="points">"Puncte: "</string>
    <string name="facebook_login">Login cu Facebook</string>
    <string name="copyright">Copyright© 2017 Cazimir Roman Dev</string>
    <string name="loading_data">Incarc bancul cu pesti…</string>
    <string name="add_joke_empty">Nu ai adaugat nimic</string>
    <string name="close">Inchide</string>
    <string name="admin_title">Bancuri de aprobat</string>
    <string name="total_points">"Total puncte: %s"</string>
    <string name="no_internet">Nu am putut detecta o conexiune la internet. Te rog sa incerci mai tarziu.</string>
    <string name="rank">"Rang: "</string>
    <string name="nextRank">Urmatorul rang in %s like-uri</string>
    <string name="rankLabel">Rang: %s</string>
    <string name="remainingAdds">Mai poti adauga %s bancuri astazi</string>
    <string name="no_added_jokes">Cam liniste pe aici…</string>
    <string name="date">"Publicat: "</string>
    <string name="test">Spam? Nu prea credem :)</string>
    <string name="approved_jokes">Aprobate</string>
    <string name="pending_jokes">In curs de aprobare</string>
    <string name="register">Inregistreaza-te</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Parola</string>
    <string name="email_missing">Te rog sa introduci o adresa de mail</string>
    <string name="email_invalid">Nu pare sa fie o adresa de email valida</string>
    <string name="password_missing">Parola lipseste!</string>
    <string name="password_minimum">Parola este prea scurta, minim 6 caractere</string>
    <string name="login">Login</string>
    <string name="hint_password_confirm">Confirma parola</string>
    <string name="password_not_matching">Parola nu este aceeasi</string>
    <string name="password_forgot">Parola uitata</string>
    <string name="forgot_password">Ai uitat parola?</string>
    <string name="forgot_password_msg">Te rog sa introduci mailul tau ca sa iti trimitem instructiunile de resetare</string>
    <string name="btn_reset_password">Reseteaza</string>
    <string name="btn_back">Inapoi</string>
    <string name="liked_jokes_title">Mi-au placut</string>
    <string name="tutorial1_title">Bine ai venit</string>
    <string name="tutorial1_text">Afla in 5 pasi cum functioneaza Bancuri bune.</string>
    <string name="tutorial2_title">Adauga un banc nou</string>
    <string name="tutorial2_text">Da click pe iconita \“plus\” ca sa adaugi un banc nou. Dupa ce e aprobat de un moderator, il vei vedea in aplicatie.</string>
    <string name="tutorial3_text">Aici gasesti bancurile care ti-au placut. Trimite-le prietenilor tai!</string>
    <string name="tutorial3_title">Bancurile favorite</string>
    <string name="tutorial4_title">Pagina de profil</string>
    <string name="tutorial4_text">Aici gasesti bancurile adaugate, punctele adunate, precum si rangul curent.</string>
    <string name="tutorial5_text">Vezi cat de apreciate sunt bancurile tale, aduna like-uri si cresti in rangul pestilor. \n Hamsie (la 0 de like-uri)\n Hering (de la 25 de like-uri)\n Somon (de la 100 de like-uri)\n Stiuca (de la 250 de like-uri)\n Rechin (de la 500 de like-uri)</string>
    <string name="tutorial5_title">Ranguri</string>
    <string name="tutorial6_title">Like si share</string>
    <string name="tutorial6_text">Arata ca iti place bancul dand like si trimite-l prietenilor tai cu optiunea share.</string>
    <string name="logout">Delogheza-te</string>
    <string name="no_joke_added">Nu ai adaugat nici un banc</string>
    <string name="no_joke_liked">Nu ai dat like la nici un banc</string>
    <string name="rating_text">Cum iti place aplicatia pana acum?</string>
    <string name="not_now">Mai tarziu</string>
    <string name="feedback_sent">Am primit feedbackul tau!</string>
    <string name="rating_send_message">Trimite-ne un mesaj</string>
    <string name="rating_improve_question">Spune-ne ce putem imbunatati</string>
    <string name="rating_send">Trimite</string>
    <string name="rating_cancel">Anuleaza</string>
    <string name="share_accept_permissions">Ca sa poti da share trebuie sa accepti permisiunile pentru a putea salva poza cu bancul la tine pe device</string>
    <string name="share_open">Deschid optiunile de share. Ai putina rabdare</string>
    <string name="permission_denied">Nu ai acceptat permisiunile. Pentru a putea da share trebuie sa le accepti</string>
    <string name="no_internet_title">Nu esti conectat</string>
    <string name="add_joke_empty_title">Nu ai adaugat nimic</string>
    <string name="generic_error_title">Eroare</string>
    <string name="leveled_up_message">Ai primit un nou rang!</string>
</resources>
